[package]
name = "json_viewer"
version = "0.1.0"
edition = "2021"



druid-widget-nursery = { git = "https://github.com/linebender/druid-widget-nursery", rev = "4427a99a99417420651ea45a334f499a14224cf8" }

[dependencies]
serde_json = "1.0.103"
druid = "0.8.1"
druid-widget-nursery = "0.1.0"
open = "5.0.1"
